crates/biome_formatter/src/snapshots/invalid_document.snap
---
source: crates/biome_formatter/src/diagnostics.rs
expression: content
---
example.js format  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid document: Expected start tag of kind Align but found start tag of kind ConditionalContent.
  
  ! This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.
