crates/biome_formatter/src/snapshots/poor_layout.snap
---
source: crates/biome_formatter/src/diagnostics.rs
expression: content
---
example.js format  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Poor layout: The formatter wasn't able to pick a good layout for your document.
  
  ! This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.
