crates/biome_formatter/src/snapshots/range_error.snap
---
source: crates/biome_formatter/src/diagnostics.rs
expression: content
---
example.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatting range 7..10 is larger than syntax tree 0..5
